can look up nft classes by root name
